--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -3,8 +3,8 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
-    # Runs at 00:00AM UTC
-    - cron: '0 0 * * *'
+    # Runs at 00:00 AM IST
+    - cron: '30 18 * * *'
 
 jobs:
   update-readme:
